Thu Mar  5 10:10:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/encoding.h (enc_initialized_p): ENC_UNINITIALIZED
	  is not defined already.

	* include/ruby/encoding.h (ENC_FROM_ENCINDEX): removed because
	  depending on a static variable.

Thu Mar  5 04:42:52 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_array.rb: fix wrong test, and add a test for
	  sort_by!.

Thu Mar  5 04:32:38 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_array.rb: add some tests for coverage.

Thu Mar  5 00:06:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/README.win32 (Requirement): added unicows.lib and dll.

Wed Mar  4 23:29:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, win32/configure.bat (--enable-win95): new option
	  to enable/disable win95 support.

Wed Mar  4 21:21:51 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/thread.rb (SizedQueue#push): fix limit condition.
	  [ruby-dev:38135]

Wed Mar  4 20:27:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (mingw): checks if unicows.lib is available.

	* include/ruby/win32.h (WIN95): moved to config.h

	* win32/Makefile.sub (LIBS): links unicows.lib if available.

	* win32/Makefile.sub (config.h): defines WIN95 only if unicows.lib
	  is available.

	* win32/setup.mak (-unicows-): checks if unicows.lib is available.

Wed Mar  4 05:19:27 2009  James Edward Gray II  <jeg2@ruby-lang.org>

  * lib/csv.rb: Some minor documentation fixes from Gregory Brown.

Wed Mar  4 03:42:56 2009  James Edward Gray II  <jeg2@ruby-lang.org>

  * lib/csv.rb: A patch from Madoka Yakamamoto to prevent an infinite
    loop while reading some encodings.

Wed Mar  4 00:54:43 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/prime.rb (Prime::prime?): used to return a wrong answer.
	  [ruby-core:22646].

	* test/test_prime.rb (test_prime?): test case for [ruby-core:22646].

Tue Mar  3 17:10:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
