@@ -6056,7 +6056,10 @@ rb_str_chomp_bang(int argc, VALUE *argv, VALUE str)
 	 memcmp(RSTRING_PTR(rs), pp, rslen) == 0)) {
 	if (rb_enc_left_char_head(p, pp, e, enc) != pp)
 	    return Qnil;
-	rb_str_modify(str);
+	str_modify_keep_cr(str);
+	if (ENC_CODERANGE(str) != ENC_CODERANGE_7BIT) {
+	    ENC_CODERANGE_CLEAR(str);
+	}
 	STR_SET_LEN(str, RSTRING_LEN(str) - rslen);
 	RSTRING_PTR(str)[RSTRING_LEN(str)] = '\0';
 	return str;
